# nexuslua-library

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  collect-plugin-files.sh  create-plugin-zip.sh  install_mac_build_tools.sh
lua_docs/: acrion-agents.dot  addagent.md  addmessage.md  addoffset.md  cores.md  currentdir.md  env.md  getconfig.md  homedir.md  import.md  install.md  isreplicated.md  log.md  luastate.md  mainpage.md  mktemp.md  peek.md  poke.md  printtable.md  readfile.md  scriptdir.md  send.md  setconfig.md  time.md  touserdata.md  unzip.md  userdatadir.md  zip.md
src/: CMakeLists.txt  agent.cpp  agent_cpp.cpp  agent_cpp.hpp  agent_id.hpp  agent_lua.cpp  agent_lua.hpp  agent_message.cpp  agent_plugin.cpp  agent_plugin.hpp  agent_thread.hpp  agent_thread_base.hpp  agent_thread_cpp.cpp  agent_thread_cpp.hpp  agent_thread_lua.cpp  agent_thread_lua.hpp  agents.cpp  config.hpp.cmake  configuration.cpp  description.cpp  lua.cpp  lua.hpp  lua_call_info.cpp  lua_call_info.hpp  lua_code_generator_find_signature.lua  lua_extension.cpp  lua_extension.hpp  lua_find_signature.hpp  lua_table.cpp  main.cpp  message.cpp  message_counter.hpp  message_to_agent.hpp  platform_specific.cpp  platform_specific.hpp  plugin_registry.cpp  plugin_spec.cpp  plugin_spec.hpp  resource.rc  thread_pool.hpp  (+2 more)
src/interface/nexuslua/: agent.hpp  agent_message.hpp  agents.hpp  configuration.hpp  cpp_handler.hpp  description.hpp  lua_table.hpp  message.hpp  plugin_install_result.hpp  plugin_registry.hpp  utility.hpp
src/test/: test_configuration.cpp  test_extensions.cpp  test_lua.cpp  test_message.cpp
src/testing-resources/: unzip.lua  zip.lua
